# AIE-E2E

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.sh  env.sh  requirements.txt
frontend/: __init__.py  aries_api.py  aries_decorators.py  aries_ir_builder.py  aries_types.py  gen_template.py
include/: CMakeLists.txt
include/tpu_mlir-c/: RegisterEverything.h
include/tpu_mlir/Dialect/: CMakeLists.txt
include/tpu_mlir/Dialect/Top/IR/: TopOps.td
include/tpu_mlir/Dialect/Tpu/IR/: TpuOps.td
python/tools/: model_transform.py
python/transform/: OnnxConverter.py
python/utils/: mlir_shell.py  preprocess.py
test/frontend/: gemm.py
utils/: build-aie-e2e.sh  build-aie.sh  build-llvm.sh  python_env.sh  requirements.txt
